--- a/Resources - Frequently Asked Questions.html
+++ b/Resources - Frequently Asked Questions.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="cid-rCKk87KfPS" id="image2-69">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rCKk87KfPS" id="image2-69">
 
     
 
