--- a/Resources - Training Videos.html
+++ b/Resources - Training Videos.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="cid-rCKqo6kPkV" id="image2-6s">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="cid-rCKqo6kPkV" id="image2-6s">
 
     
 
