changed slider orientation

--- a/Resources - Product Brochure Library.html
+++ b/Resources - Product Brochure Library.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-rCKeO1KG4g" id="image2-5t">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rCKeO1KG4g" id="image2-5t">
 
     
 
