--- a/Why Zyno - Who We Serve.html
+++ b/Why Zyno - Who We Serve.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="cid-rCElK9tn5Y" id="image2-10">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="cid-rCElK9tn5Y" id="image2-10">
 
     
 
