covid change round 2

--- a/About Us - Leadership Team.html
+++ b/About Us - Leadership Team.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="cid-rCKwh3DUKz" id="image2-7a">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="cid-rCKwh3DUKz" id="image2-7a">
 
     
 
