--- a/Resources - Training Videos.html
+++ b/Resources - Training Videos.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="cid-rCKqo6kPkV" id="image2-6s">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rCKqo6kPkV" id="image2-6s">
 
     
 
