--- a/Resources - Walgreens Training Videos.html
+++ b/Resources - Walgreens Training Videos.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rCPTM18yZ7" id="image2-93">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rCPTM18yZ7" id="image2-93">
 
     
 
