--- a/Resources - AlixaRX Training Videos.html
+++ b/Resources - AlixaRX Training Videos.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-rCQxeT3IDs" id="image2-99">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="cid-rCQxeT3IDs" id="image2-99">
 
     
 
