--- a/Resources - Frequently Asked Questions.html
+++ b/Resources - Frequently Asked Questions.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rCKk87KfPS" id="image2-69">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rCKk87KfPS" id="image2-69">
 
     
 
@@ -101,12 +101,12 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_173" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_149" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">Can you use another vendor’s tubing in the Z-800?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse1_173" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">No. Only Zyno Medical tubing is tested, calibrated, and approved for use in the Zyno Medical Z-800 Pump.
 <br></p>
@@ -115,13 +115,13 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_173" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_149" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">Can you put tubing in the pump before you turn the pump on?
 </h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_173" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">No. You must turn the pump on prior to loading the tubing. The pump needs to perform a self- test prior to loading.
 <br>
@@ -131,12 +131,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_173" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_149" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-5">How can you turn down the volume of the alarm?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse3_173" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Turn pump on and choose New Infusion, press OK. Arrow down to “Factory Set” and choose SELECT. Arrow down to “Alarm Volume” and choose SELECT. Use the UP and DOWN arrow keys to change alarm volume. Low/Middle/High.
 <br>
@@ -146,12 +146,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_173" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_149" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-5">How can you adjust the contrast/brightness of the screen of the Z-800?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse4_173" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Turn pump on and choose New Infusion, press OK. Arrow down to “Factory Set” and choose SELECT. Arrow down to “Brightness or Contrast” and choose SELECT. Use the UP and DOWN arrow keys to change the settings.
 <br>
@@ -161,12 +161,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_173" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_149" aria-expanded="false" aria-controls="collapse5">
                                     <h4 class="mbr-fonts-style display-5">What kind of tubing does the Z-800 use?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse5_173" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Zyno Medical Tubing is the only tubing tested, calibrated, and approved for use with the Zyno Medical Z-800 pump. Multiple configurations are available.
 <br>
@@ -176,12 +176,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_173" aria-expanded="false" aria-controls="collapse6">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_149" aria-expanded="false" aria-controls="collapse6">
                                     <h4 class="mbr-fonts-style display-5">Where can I get basic training?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse6_173" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse6_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">You can visit our online Training Center for pump tutorial videos and an Interactive pump. To fully understand the Z-800 Pump, Please read the pump manual included with your pump
 <br>
@@ -210,12 +210,12 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_174" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_150" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">How do I setup a continuous infusion Rate/Time?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse1_174" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_150" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Turn pump on and choose New Infusion, press OK. “Cont. Mode R/V” will already be highlighted, press SELECT. Enter the correct values and press run. (Yellow Button) Click here for a Continuous R/V Training Video
 <br>
@@ -225,13 +225,13 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_174" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_150" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">How do I setup a continuous infusion Volume/Time?
 </h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_174" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_150" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Turn pump on and choose New Infusion, press OK. Arrow down to “Cont. Mode V/T” and press SELECT. Enter the correct values and press run. (Yellow Button) Click here for a Continuous T/V Training Video
 <br>
@@ -241,12 +241,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_174" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_150" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-5">How do I setup a 10 step infusion?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse3_174" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_150" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Click here for a 10 Step Training Video Turn pump on and choose New Infusion, press OK. Arrow down to “Ten Step Mode” and press SELECT. 1. Enter Rate by using the Up and Down Numeric Data Entry Keys. 2. Arrow down to highlight : VTBI 3. Enter the correct value using the UP and Down Numeric Data Entry Keys. This concludes Step 1. 4. Press down arrow Soft Key to continue to STEP 2. 5. Continue the process for each step of the infusion, verifying each entry is correct. 6. Press Run to start the infusion. 7. There is an audio tone between steps. 8. You can edit each step of the program prior to pressing the RUN KEY. Once the run key is pressed the program is locked in. 9. You must Press RUN/STOP to PAUSE the infusion, then press PROG key to edit the list.
 <br>
@@ -256,12 +256,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_174" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_150" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-5">How do I load tubing into the Z-800?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse4_174" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_150" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Prime the Zyno Medical tubing using gravity, flip and tap air out of back check valve and any Y sites and engage roller clamp. Turn the pump on to allow proper self- test to be performed. Once pump is powered up, open the pump door. Load tubing from the TOP down, from bag to patient. Press tubing into all tubing sensors down to the BLACK air-in-line sensor at the bottom. Let the tubing lay over the metal Anti Free Flow clamp—Do not push tubing in, closing the door will engage this mechanism. Close the door.
 <br>
@@ -271,12 +271,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_174" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_150" aria-expanded="false" aria-controls="collapse5">
                                     <h4 class="mbr-fonts-style display-5">My pump has an issue. Who do I contact?
 </h4>
                                 </a>
                             </div>
-                            <div id="collapse5_174" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_150" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Please contact our team.
 <br>Email: ZynoComplaint@zynomed.com
